crankypage/crankysvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cranky
  labels:
    app: cranky
spec:
  selector:
    app: cranky
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
