crankypage/crankyingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: cranky-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencryptcranky
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - goodmorningcrankysysadmin.com
    secretName: cranky-cloudflare-api-key-secret
  rules:
  - host: goodmorningcrankysysadmin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cranky
            port: 
              number: 80
